--- a/vet-clinic/package.json
+++ b/vet-clinic/package.json
@@ -9,6 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "aos": "^2.3.4",
         "framer-motion": "^11.3.18",
         "next": "14.2.5",
