--- a/vet-clinic/package.json
+++ b/vet-clinic/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "aos": "^2.3.4",
+        "fortawesome": "^0.0.1-security",
         "framer-motion": "^11.3.18",
         "next": "14.2.5",
         "react": "^18",
