--- a/vet-clinic/package.json
+++ b/vet-clinic/package.json
@@ -18,6 +18,7 @@
         "next": "14.2.5",
         "react": "^18",
         "react-dom": "^18",
+        "react-responsive-carousel": "^3.2.23",
         "sharp": "^0.33.4"
     },
     "devDependencies": {
